| Summary: | ASTERISK-28492: pjsip reload not reloading wizard endpoint/pickup_group endpoint/call_group | ||||
| Reporter: | Jean-Denis Girard (jdg) | Labels: | pjsip | ||
| Date Opened: | 2019-07-31 16:25:52 | Date Closed: | 2020-01-07 12:39:07.000-0600 | ||
| Priority: | Major | Regression? | |||
| Status: | Closed/Complete | Components: | Channels/chan_pjsip | ||
| Versions: | 16.5.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | I'm having a strange problem when using pjsip wizard and reloading
("pjsip reload" on CLI): some data (specifically endpoint/pickup_group endpoint/call_group) is not modified. For example, initially I have empty pickup group: tiare*CLI> pjsip show endpoint xxx ... pickup_group : ... Then, I add endpoint/pickup_group = 0,3 to pjsip_wizard.conf, and reload: pickup_group remains empty. Then, if I change the line in pjsip_wizard.conf to endpoint/pickup_group = 0, 3 ^ note the space here! then reload, and I get what was expected: tiare*CLI> pjsip show endpoint xxx ... pickup_group : 0, 3 ... I have seen this problem on Asterisk-16 only (up to latest 16.5.0). The modified configuration file is included from /etc/asterisk/pjsip_wizard.conf: #include astportal/pjsip_wizard.conf pjsip reload has default definition in cli_aliases.conf. | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2019-07-31 16:25:53.260-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Jean-Denis Girard (jdg) 2019-08-01 12:05:25.552-0500 I do not agree with considering this is a minor issue. As far as I know, Asterisk needs to be restarted after endpoint/call_group or endpoint/pickup_group is changed, which is a major issue. By: Friendly Automation (friendly-automation) 2020-01-07 12:39:08.455-0600 Change 13510 merged by Friendly Automation: res_pjsip_config_wizard: Fix change detection for wizard settings [https://gerrit.asterisk.org/c/asterisk/+/13510|https://gerrit.asterisk.org/c/asterisk/+/13510] By: Friendly Automation (friendly-automation) 2020-01-07 13:05:30.442-0600 Change 13545 merged by George Joseph: res_pjsip_config_wizard: Fix change detection for wizard settings [https://gerrit.asterisk.org/c/asterisk/+/13545|https://gerrit.asterisk.org/c/asterisk/+/13545] By: Friendly Automation (friendly-automation) 2020-01-07 13:06:17.374-0600 Change 13546 merged by George Joseph: res_pjsip_config_wizard: Fix change detection for wizard settings [https://gerrit.asterisk.org/c/asterisk/+/13546|https://gerrit.asterisk.org/c/asterisk/+/13546] By: Friendly Automation (friendly-automation) 2020-01-07 13:06:46.475-0600 Change 13547 merged by George Joseph: res_pjsip_config_wizard: Fix change detection for wizard settings [https://gerrit.asterisk.org/c/asterisk/+/13547|https://gerrit.asterisk.org/c/asterisk/+/13547] | ||||